--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-twilio.account.sid=YOUR_ACCOUNT_SID
-twilio.api.key=YOUR_AUTH_TOKEN
-twilio.api.secret=YOUR_AUTH_TOKEN
+twilio.account.sid=ACxxxc45
+twilio.api.key=SK7xxx6e3
+twilio.api.secret=bMxxx2T
